# samdul21food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html
src/samdul21food/: .main.py.swp  main.py
